--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,22 @@ Temporary Items
 # Ignore all local history of files
 .history
 .ionide
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+build/
+
+### CMake Patch ###
+# External projects
+*-prefix/
+
