--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,10 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "any": "cpp",
+        "charconv": "cpp",
+        "iomanip": "cpp",
+        "variant": "cpp"
     }
 }
