--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,8 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
+# CMakeUserPresets.json
+# ./Makefile
 CTestTestfile.cmake
 _deps
 build/
@@ -101,4 +103,27 @@ build/
 ### CMake Patch ###
 # External projects
 *-prefix/
+
+## Conan ###
+# Conan build information
+conan.lock
+conanbuildinfo.*
+conaninfo.txt
+graph_info.json
+
+## Various built-in generators
+# cmake_find_package generator https://docs.conan.io/en/latest/reference/generators/cmake_find_package.html
+Find*.cmake
+
+# cmake_paths generator https://docs.conan.io/en/1.4/integrations/cmake/cmake_paths_generator.html
+conan_paths.*
+
+# Environment activation scripts produced by https://docs.conan.io/en/latest/mastering/virtualenv.html#virtualenv-generator
+activate_run.ps1
+activate_run.sh
+deactivate_run.ps1
+deactivate_run.sh
+environment_run.ps1.env
+environment_run.sh.env
+
 
