--- a/.gitignore
+++ b/.gitignore
@@ -94,8 +94,8 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
-# CMakeUserPresets.json
-# ./Makefile
+CMakeUserPresets.json
+./Makefile
 CTestTestfile.cmake
 _deps
 build/
