UPDATE: system tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(simple-safety-synth
     safety-solver/BetterSafetySolver.cpp
     utils/aiger.h
     utils/aiger.cpp
+    utils/aiger2smv.cpp
 )
 
 target_link_libraries(simple-safety-synth
