--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-python@v4
     - name: Install conan
       run: pip install conan
+      run: conan profile detect --force
     - name: Install missing dependencies
       run: conan install . --output-folder=build --build=missing 
     - name: Configure CMake
