--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,32 +7,34 @@ on:
     branches: [ "main", "develop" ]
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
-    - name: Install conan
+    - name: Install conan and dependencies
       run: |
         pip install conan
         conan profile detect --force
-    - name: Install missing dependencies
-      run: conan install . --output-folder=build --build=missing 
+        conan install . --output-folder=build --build=missing
+    - name: Install cudd
+      run: |
+        cd cudd
+        ./setup.sh
+        make -j
+    - name: Install aiger
+      run: |
+        cd aiger
+        make -j
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: > 
         cmake -B ${{github.workspace}}/build 
-        -DCMAKE_TOOLCHAIN_FILE=conan_toolchain.cmake
+        -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/conan_toolchain.cmake
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
 
     - name: Build
@@ -40,7 +42,4 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-
