--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Configure CMake
       run: > 
         cmake -B ${{github.workspace}}/build 
-        -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/conan_toolchain.cmake
+        -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/build/conan_toolchain.cmake
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
 
     - name: Build
