--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
+    - name: APT install
+      uses: sudo apt-get install -y automake
     - name: Install conan and dependencies
       run: |
         pip install conan
