--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
     - name: APT install
-      run: sudo apt-get install -y automake-1.14
+      run: sudo apt-get install -y automake=1.14
     - name: Install conan and dependencies
       run: |
         pip install conan
