--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
-    - name: APT install
+    - name: Automake 1.14 installation
       run:
-        sudo apt update && sudo apt upgrade 
-        sudo apt-get install -y autotools-dev autoconf
+        wget https://mirrors.edge.kernel.org/ubuntu/pool/main/a/automake-1.14/automake_1.14.1-2ubuntu1_all.deb
+        sudo apt install ./automake_1.14.1-2ubuntu1_all.deb
     - name: Install conan and dependencies
       run: |
         pip install conan
