--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Automake 1.14 installation
       run: |
         wget https://mirrors.edge.kernel.org/ubuntu/pool/main/a/automake-1.14/automake_1.14.1-2ubuntu1_all.deb
-        sudo apt install ./automake_1.14.1-2ubuntu1_all.deb
+        sudo apt install -y ./automake_1.14.1-2ubuntu1_all.deb
     - name: Install conan and dependencies
       run: |
         pip install conan
