--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: [ "develop" ]
 
 env:
   BUILD_TYPE: Release
