Updated project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,25 +13,25 @@ find_package(argparse REQUIRED)
 find_library(cudd REQUIRED NAMES libcudd.a)
 find_program(BASH_EXECUTABLE NAMES bash REQUIRED)
 
-set(AIGER_LIBS ${CMAKE_SOURCE_DIR}/aiger/libaiger.a)
+set(AIGER_LIBS ${CMAKE_SOURCE_DIR}/src/aiger/libaiger.a)
 
 add_executable(simple-safety-synth
     main.cpp
-    safety-arena/SafetyArena.h
-    safety-arena/SafetyArena.cpp
-    safety-solver/BDD2Aiger.h
-    safety-solver/BDD2Aiger.cpp
-    safety-solver/GameSolver.h
-    safety-solver/GameSolver.cpp
-    safety-solver/SimpleSafetySolver.h
-    safety-solver/SimpleSafetySolver.cpp
-    safety-solver/GFPSafetySolver.h
-    safety-solver/GFPSafetySolver.cpp
-    safety-solver/SimpleCoSafetySolver.h
-    safety-solver/SimpleCoSafetySolver.cpp
-    utils/aiger.h
-    utils/aiger.cpp
-    utils/aiger2smv.cpp
+    src/safety-arena/SafetyArena.h
+    src/safety-arena/SafetyArena.cpp
+    src/safety-solver/BDD2Aiger.h
+    src/safety-solver/BDD2Aiger.cpp
+    src/safety-solver/GameSolver.h
+    src/safety-solver/GameSolver.cpp
+    src/safety-solver/SimpleSafetySolver.h
+    src/safety-solver/SimpleSafetySolver.cpp
+    src/safety-solver/GFPSafetySolver.h
+    src/safety-solver/GFPSafetySolver.cpp
+    src/safety-solver/SimpleCoSafetySolver.h
+    src/safety-solver/SimpleCoSafetySolver.cpp
+    src/utils/aiger.h
+    src/utils/aiger.cpp
+    src/utils/aiger2smv.cpp
 )
 
 target_link_libraries(simple-safety-synth PRIVATE
@@ -40,7 +40,9 @@ target_link_libraries(simple-safety-synth PRIVATE
     argparse::argparse
 )
 
-target_include_directories(simple-safety-synth PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/aiger)
+target_include_directories(simple-safety-synth PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/aiger
+)
 
 enable_testing()
 
