--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -36,7 +36,7 @@ jobs:
         sudo make install
     - name: Install aiger
       run: |
-        make -C aiger
+        make -C src/aiger
     - name: Configure CMake
       run: > 
         cmake -B ${{github.workspace}}/build 
